--- a/CarFactory/CarFactoryBuisinessLogic/CarFactoryBusinessLogic.csproj
+++ b/CarFactory/CarFactoryBuisinessLogic/CarFactoryBusinessLogic.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.12.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.12" />
+    <PackageReference Include="PDFsharp-MigraDoc" Version="1.50.5147" />
   </ItemGroup>
 
 </Project>
