--- a/CarFactory/CarFactoryView/App.config
+++ b/CarFactory/CarFactoryView/App.config
@@ -3,6 +3,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <appSettings>
+    <add key="SmtpClientHost" value="smtp.yandex.ru" />
+    <add key="SmtpClientPort" value="587" />
+    <add key="PopHost" value="pop.yandex.ru" />
+    <add key="PopPort" value="995" />
+    <add key="MailLogin" value="sidor228ivan@yandex.ru" />
+    <add key="MailPassword" value="passworD666" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
