first changes without views

--- a/CarFactory/CarFactoryDatabaseImplement/CarFactoryDatabaseImplement.csproj
+++ b/CarFactory/CarFactoryDatabaseImplement/CarFactoryDatabaseImplement.csproj
@@ -9,6 +9,8 @@
     <Compile Remove="Migrations\20210401134130_add-clients.Designer.cs" />
     <Compile Remove="Migrations\20210401134342_add-clients.cs" />
     <Compile Remove="Migrations\20210401134342_add-clients.Designer.cs" />
+    <Compile Remove="Migrations\20210429185325_addedClients.cs" />
+    <Compile Remove="Migrations\20210429185325_addedClients.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
