--- a/CarFactory/CarFactoryClientApp/CarFactoryClientApp.csproj
+++ b/CarFactory/CarFactoryClientApp/CarFactoryClientApp.csproj
@@ -5,12 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.13" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CarFactoryBuisinessLogic\CarFactoryBusinessLogic.csproj" />
     <ProjectReference Include="..\CarFactoryDatabaseImplement\CarFactoryDatabaseImplement.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
