lab 7 hard ready

--- a/CarFactory/CarFactoryView/CarFactoryView.csproj
+++ b/CarFactory/CarFactoryView/CarFactoryView.csproj
@@ -35,6 +35,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'ClientStart|AnyCPU'">
+    <OutputPath>bin\ClientStart\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.10.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
       <HintPath>..\packages\Portable.BouncyCastle.1.8.10\lib\net40\BouncyCastle.Crypto.dll</HintPath>
@@ -278,7 +281,7 @@
     </Compile>
     <Compile Include="FormMails.Designer.cs">
       <DependentUpon>FormMails.cs</DependentUpon>
-    </Compile>  
+    </Compile>
     <Compile Include="FormReportOrders.cs">
       <SubType>Form</SubType>
     </Compile>
